add class to h3

--- a/index.html
+++ b/index.html
@@ -68,12 +68,11 @@
                 <div class="col-md-6 col-lg-5">
                     <picture>
                         <source srcset="img/wellwiselogo2-1x.png" media="(max-width:767px)">
-                        <img src="img/wellwiselogo2-2x.png" alt="My Photo">
+                        <img src="img/wellwiselogo2-2x.png" alt="My Photo" class="wellwise-logo">
                     </picture>
                 </div>
                 <div class="col-md-6 col-lg-7">
-                    <div class="project-title">
-                        <h3>WellWise</h3>
+                        <h3 class="project-title"> WellWise</h3>
                         <p>WellWise is a responsive web app designed to empower users with credible, evidence-based
                             natural health information and personalized tools to improve their well-being. The app helps
                             users stay informed about the latest trends, securely store users’ health data with
@@ -83,7 +82,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         <div class="row">
             <div class="col-md-6 col-lg-7">
                 <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto"
@@ -1536,11 +1534,9 @@
                 </svg>
             </div>
             <div class="col-md-6 col-lg-5">
-                <div class="project-title">
-                    <h3>Second Project</h3>
+                    <h3 class="project-title">Second Project</h3>
                 </div>
             </div>
-        </div>
     </main>
 
     <footer>
@@ -1550,7 +1546,7 @@
                 <a href="tel:+13036563518"> +1 3036563518</a> Prefer sending an email?
             </p>
             <div>
-                <a href="mailto:miasmckay0@gmail.com" class="email-button">Email me</a>
+                <a href="mailto:miasmckay0@gmail.com" class="email-button">Email Me</a>
             </div>
             <a href="LINKEDIN_URL" target="blank">
                 <svg class="social-icon" height="100%"
@@ -1579,7 +1575,7 @@
     </footer>
 
     <script>
-        src = "https://code.jquery.com/jquery-3.7.1.min.js" integrity = "sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin = "anonymous" ></script>
+        src = "https://code.jquery.com/jquery-3.7.1.min.js" integrity= "sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin = "anonymous" ></script>
     <script src="js/scripts.js"></script>
 </body>
 
