--- a/wellwise.html
+++ b/wellwise.html
@@ -144,7 +144,7 @@
                     href="https://www.figma.com/design/KQbvBVvYrlNAbbQiTd8vWP/WellWise-Project?node-id=452-119&t=4gnipLtAyfpYkDII-0">Prototype
                     Link</a>
             </div>
-        </container>
+        </div>
     </main>
     <footer>
         <div class="container">
